# canada-xc

./: .dockerignore  .gitignore  README.md  manage.py  nixpacks.toml  pyproject.toml  update_dev_database.sh
canadaxc/: asgi.py  settings.py  urls.py  wsgi.py
data/: acadia_2024_women.csv  aus_2024_women.csv  canwest_championships_female_2024.csv  canwest_championships_male_2024.csv  capital_xc_men_2024.csv  capital_xc_women_2024.csv  don_mills_extract_2024.py  don_mills_open_men_2024.csv  don_mills_open_men_2024.html  don_mills_open_women_2024.html  fetch_athletic_live_finishers.sh  marauder_2024_parser.py  marauder_invitational_men_2024.csv  marauder_invitational_men_2024.json  marauder_invitational_women_2024.csv  marauder_invitational_women_2024.json  monton_2024_men.csv  oua_2024_women_raw.json  parse_rseq_2024.py  parse_sherbrooke_results_2024.py  parse_usports_2024.py  plaines_women_2024.csv  rseq_championships_men_2024.html  rseq_championships_women_2024.html  scrape_usports_2024.py  sherbrooke_invitational_female_2024.csv  sherbrooke_invitational_male_2024.json  sherbrooke_invitational_women_2024.json  stfx_2024_men.csv  usports_2024_men.html  usports_2024_women.html  western_invitational_2024_men.csv  western_invitational_2024_men_raw.json  western_invitational_2024_women.csv
data/parsers/: don_mills_extract_2024.py  fetch_athletic_live_finishers.sh  fetch_race_roster.sh  fetch_run_signup.sh  fetch_speed_river.py  marauder_2024_parser.py  parse_rseq_2024.py  parse_sherbrooke_results_2024.py  parse_usports_2024.py  standardize_team_names.py  standardize_team_names.sh
data/raw/: acadia_2024_men.csv  acadia_female_2016.csv  acadia_male_2016.csv  aus_2024_men.csv  aus_female_2017.csv  aus_female_2025.csv  aus_male_2017.csv  aus_male_2025.csv  capital_xc_women_2024.csv  cis_2014_men.csv  cis_2014_women.csv  cis_2015_men.csv  cis_2015_women.csv  cis_2016_men.csv  cis_2016_women.csv  dal_female_2017.csv  dal_male_2017.csv  don_mills_open_women_2024.csv  don_mills_open_women_2024.html  mcgill_invitational_female_2024.csv  mcgill_invitational_male_2024.csv  moncton_2024_women.csv  moncton_female_2016.csv  moncton_male_2016.csv  oua_2024_men.csv  oua_2024_women.csv  plaines_men_2024.csv  rseq_championships_men_2024.csv  rseq_championships_women_2024.csv  sherbrooke_invitational_male_2024.csv  stewart_cup_men_2024.csv  stewart_cup_women_2024.csv  stfx_2024_women.csv  stfx_female_2017.csv  stfx_male_2017.csv  unb_female_2017.csv  unb_male_2017.csv  usports_2017_men.csv  usports_2017_men_standardized.csv  usports_2017_women.csv  (+15 more)
racing/: admin.py  apps.py  converters.py  models.py  urls.py  views.py
racing/migrations/: 0001_initial.py  0002_auto_20241011_0331.py  0003_race_sex.py  0004_result_points.py  0005_runner_headshot_result_runner.py  0006_runner_slug.py  0007_alter_runner_slug.py  0008_meet_slug.py  0009_populate_meet_slug.py  0010_alter_meet_slug.py  0011_alter_team_full_name_alter_team_short_name.py  (+26 more)
static/: styles.css
templates/: base.html
(+15 files in other folders)
