[project]
name = "canada-xc"
version = "0.1.0"
description = "Django application for Canadian cross country running"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-import-export>=4.1.1",
    "django>=5.1.2",
    "pillow>=11.0.0",
    "psycopg>=3.2.3",
]

[tool.uv]
dev-dependencies = [
    "djade>=1.3.0",
    "ruff>=0.6.9",
]

[tool.ruff]
exclude = ["**/migrations/*.py", "settings.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

# isort
[tool.ruff.lint.isort]
known-first-party = ["canadaxc"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "django",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
